# Excel-To-Huntflow

./: .gitignore  Makefile  README.MD  pyproject.toml
.github/workflows/: importer.yml
src/: cli.py  engine.py  main.py  xlsx_parser.py
src/core/: exeptions.py  fix_parser_state.py  settings.py
src/requests/: api_client.py
src/utils/: check_token.py  file_search.py  xlsx_parser.py
tests/: __init__.py  test_api_client.py  test_find_file_in_directory.py  test_upload_file_to_huntflow.py  test_xlsx_parser.py
tests/fixtures/: testdb.xlsx
